fix wrapping

--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@
 }
 
 .filtersSection {
+  display: flex;
   box-sizing: border-box;
   border: 1px solid rgb(226, 92, 43);
   border-radius: 0.8rem;
@@ -51,6 +52,8 @@
   flex-basis: 100%;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
   border: 0.5px solid rgb(226, 92, 43);
   border-radius: 0.8rem;
   margin: 3%;
